# controllers/orders_wechat.go
@@ -26,7 +26,7 @@ func NewOrderCtrl() *OrderCtrl {
 // @Success     200          {object} models.Order
 // @Failure     400          {object} cns_errors.RainbowErrorDetailInfo "Invalid request"
 // @Failure     500          {object} cns_errors.RainbowErrorDetailInfo "Internal Server error"
-// @Router      /orders/wechat [post]
+// @Router      /orders [post]
 func (w *OrderCtrl) MakeOrder(c *gin.Context) {
 	req := services.MakeOrderReq{}
 	if err := c.ShouldBindJSON(&req); err != nil {
@@ -43,11 +43,11 @@ func (w *OrderCtrl) MakeOrder(c *gin.Context) {
 // @Summary     refresh pay url
 // @Description refresh pay url
 // @Produce     json
-// @Param       trade_no   path     string                            true "trade no"
+// @Param       trade_no path     string true "trade no"
 // @Success     200      {object} services.MakeOrderResp
-// @Failure     400        {object} cns_errors.RainbowErrorDetailInfo "Invalid request"
-// @Failure     500        {object} cns_errors.RainbowErrorDetailInfo "Internal Server error"
-// @Router      /orders/wechat/refresh-url/{trade_no} [put]
+// @Failure     400      {object} cns_errors.RainbowErrorDetailInfo "Invalid request"
+// @Failure     500      {object} cns_errors.RainbowErrorDetailInfo "Internal Server error"
+// @Router      /orders/refresh-url/{trade_no} [put]
 func (w *OrderCtrl) RefreshPayUrl(c *gin.Context) {
 	trandeNo := c.Param("trade_no")
 	o, err := w.service.RefreshUrl(trandeNo)
@@ -59,11 +59,11 @@ func (w *OrderCtrl) RefreshPayUrl(c *gin.Context) {
 // @Summary     query order by trade no
 // @Description query order by trade no
 // @Produce     json
-// @Param       trade_no path     string true "trade no"
-// @Success     200      {object} models.WechatOrderDetail
+// @Param       trade_no path     string                            true "trade no"
+// @Success     200      {object} models.Order                      "order"
 // @Failure     400      {object} cns_errors.RainbowErrorDetailInfo "Invalid request"
 // @Failure     500      {object} cns_errors.RainbowErrorDetailInfo "Internal Server error"
-// @Router      /orders/wechat/{trade_no} [get]
+// @Router      /orders/{trade_no} [get]
 func (w *OrderCtrl) GetOrder(c *gin.Context) {
 	trandeNo := c.Param("trade_no")
 	o, err := w.service.GetOrder(trandeNo)
@@ -75,12 +75,12 @@ func (w *OrderCtrl) GetOrder(c *gin.Context) {
 // @Summary     refund pay
 // @Description refund pay
 // @Produce     json
-// @Param       trade_no path     string true "trade no"
+// @Param       trade_no   path     string                            true "trade no"
 // @Param       refund_req body     services.RefundReq                true "refund_req"
-// @Success     200        {object} models.WechatRefundDetail         "refund_detail"
-// @Failure     400      {object} cns_errors.RainbowErrorDetailInfo "Invalid request"
-// @Failure     500      {object} cns_errors.RainbowErrorDetailInfo "Internal Server error"
-// @Router      /orders/wechat/refund/{trade_no} [put]
+// @Success     200        {object} models.OrderCore                  "order"
+// @Failure     400        {object} cns_errors.RainbowErrorDetailInfo "Invalid request"
+// @Failure     500        {object} cns_errors.RainbowErrorDetailInfo "Internal Server error"
+// @Router      /orders/refund/{trade_no} [put]
 func (w *OrderCtrl) Refund(c *gin.Context) {
 	trandeNo := c.Param("trade_no")
 	req := services.RefundReq{}
@@ -97,11 +97,11 @@ func (w *OrderCtrl) Refund(c *gin.Context) {
 // @Summary     close order
 // @Description close order
 // @Produce     json
-// @Param       trade_no path     string true "trade no"
-// @Success     200      {object} models.WechatOrderDetail
+// @Param       trade_no path     string                            true "trade no"
+// @Success     200      {object} models.OrderCore                  "order"
 // @Failure     400      {object} cns_errors.RainbowErrorDetailInfo "Invalid request"
 // @Failure     500      {object} cns_errors.RainbowErrorDetailInfo "Internal Server error"
-// @Router      /orders/wechat/close/{trade_no} [put]
+// @Router      /orders/close/{trade_no} [put]
 func (w *OrderCtrl) Close(c *gin.Context) {
 	trandeNo := c.Param("trade_no")
 	o, err := w.service.Close(trandeNo)
