# docs/swagger.yaml
@@ -65,96 +65,30 @@ definitions:
       updated_at:
         type: string
     type: object
-  models.WechatOrderDetail:
+  models.OrderCore:
     properties:
       amount:
+        description: 单位为分
         type: integer
-      appid:
+      app_name:
         type: string
-      attach:
+      code_url:
         type: string
-      bank_type:
+      description:
         type: string
-      created_at:
+      h5_url:
         type: string
-      deleted_at:
-        $ref: '#/definitions/gorm.DeletedAt'
-      id:
-        type: integer
-      mchid:
+      refund_state:
         type: string
-      payer:
-        type: string
-      refresh_status:
-        type: string
-      refund_no:
-        type: string
-      success_time:
+      time_expire:
         type: string
       trade_no:
         type: string
+      trade_provider:
+        type: string
       trade_state:
         type: string
-      trade_state_desc:
-        type: string
       trade_type:
-        type: string
-      transaction_id:
-        type: string
-      updated_at:
-        type: string
-    type: object
-  models.WechatRefundDetail:
-    properties:
-      amount:
-        description: 金额详细信息
-        type: integer
-      channel:
-        description: 枚举值： - ORIGINAL—原路退款 - BALANCE—退回到余额 - OTHER_BALANCE—原账户异常退到其他余额账户
-          - OTHER_BANKCARD—原银行卡异常退到其他银行卡 * `ORIGINAL` - 原路退款 * `BALANCE` - 退回到余额 *
-          `OTHER_BALANCE` - 原账户异常退到其他余额账户 * `OTHER_BANKCARD` - 原银行卡异常退到其他银行卡
-        type: string
-      create_time:
-        description: 退款受理时间，遵循rfc3339标准格式，格式为YYYY-MM-DDTHH:mm:ss+TIMEZONE，YYYY-MM-DD表示年月日，T出现在字符串中，表示time元素的开头，HH:mm:ss表示时分秒，TIMEZONE表示时区（+08:00表示东八区时间，领先UTC
-          8小时，即北京时间）。例如：2015-05-20T13:29:35+08:00表示，北京时间2015年5月20日13点29分35秒。
-        type: string
-      created_at:
-        type: string
-      deleted_at:
-        $ref: '#/definitions/gorm.DeletedAt'
-      funds_account:
-        description: '退款所使用资金对应的资金账户类型 枚举值： - UNSETTLED : 未结算资金 - AVAILABLE : 可用余额
-          - UNAVAILABLE : 不可用余额 - OPERATION : 运营户 - BASIC : 基本账户（含可用余额和不可用余额） * `UNSETTLED`
-          - 未结算资金 * `AVAILABLE` - 可用余额 * `UNAVAILABLE` - 不可用余额 * `OPERATION` - 运营户
-          * `BASIC` - 基本账户（含可用余额和不可用余额）'
-        type: string
-      id:
-        type: integer
-      out_refund_no:
-        description: 商户系统内部的退款单号，商户系统内部唯一，只能是数字、大小写字母_-|*@ ，同一退款单号多次请求只退一笔。
-        type: string
-      out_trade_no:
-        description: 原支付交易对应的商户订单号
-        type: string
-      refund_id:
-        type: string
-      status:
-        description: 退款到银行发现用户的卡作废或者冻结了，导致原路退款银行卡失败，可前往商户平台（pay.weixin.qq.com）-交易中心，手动处理此笔退款。
-          枚举值： - SUCCESS—退款成功 - CLOSED—退款关闭 - PROCESSING—退款处理中 - ABNORMAL—退款异常 * `SUCCESS`
-          - 退款成功 * `CLOSED` - 退款关闭 * `PROCESSING` - 退款处理中 * `ABNORMAL` - 退款异常
-        type: string
-      success_time:
-        description: 退款成功时间，退款状态status为SUCCESS（退款成功）时，返回该字段。遵循rfc3339标准格式，格式为YYYY-MM-DDTHH:mm:ss+TIMEZONE，YYYY-MM-DD表示年月日，T出现在字符串中，表示time元素的开头，HH:mm:ss表示时分秒，TIMEZONE表示时区（+08:00表示东八区时间，领先UTC
-          8小时，即北京时间）。例如：2015-05-20T13:29:35+08:00表示，北京时间2015年5月20日13点29分35秒。
-        type: string
-      transaction_id:
-        description: 微信支付交易订单号
-        type: string
-      updated_at:
-        type: string
-      user_received_account:
-        description: 取当前退款单的退款入账方，有以下几种情况： 1）退回银行卡：{银行名称}{卡类型}{卡尾号} 2）退回支付用户零钱:支付用户零钱
-          3）退还商户:商户基本账户商户结算银行账户 4）退回支付用户零钱通:支付用户零钱通
         type: string
     type: object
   services.MakeOrderReq:
@@ -165,14 +99,27 @@ definitions:
         type: string
       notify_url:
         type: string
+      qr_mode:
+        description: 只有alipay，且 trade type 为 h5 模式有效; 用法参考 https://opendocs.alipay.com/apis/api_1/alipay.trade.page.pay?scene=22
+        type: string
+      return_url:
+        description: 只有alipay，且 trade type 为 h5 模式有效
+        type: string
       time_expire:
+        description: alipay 当面付无效，当面付固定过期时间为2小时
         type: integer
+      trade_provider:
+        enum:
+        - wechat
+        - alipay
+        type: string
       trade_type:
         type: string
     required:
     - amount
     - description
     - time_expire
+    - trade_provider
     - trade_type
     type: object
   services.MakeOrderResp:
@@ -207,35 +154,7 @@ info:
   title: Rainbow-API
   version: "1.0"
 paths:
-  /orders/summary/{trade_no}:
-    get:
-      description: query order summary by trade no
-      operationId: QueryOrderSummary
-      parameters:
-      - description: trade no
-        in: path
-        name: trade_no
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/models.Order'
-        "400":
-          description: Invalid request
-          schema:
-            $ref: '#/definitions/cns_errors.RainbowErrorDetailInfo'
-        "500":
-          description: Internal Server error
-          schema:
-            $ref: '#/definitions/cns_errors.RainbowErrorDetailInfo'
-      summary: query order summary by trade no
-      tags:
-      - Orders
-  /orders/wechat:
+  /orders:
     post:
       description: make order
       operationId: MakeOrder
@@ -264,7 +183,7 @@ paths:
       summary: Make Order
       tags:
       - Orders
-  /orders/wechat/{trade_no}:
+  /orders/{trade_no}:
     get:
       description: query order by trade no
       operationId: QueryWechatOrderDetail
@@ -278,9 +197,9 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: order
           schema:
-            $ref: '#/definitions/models.WechatOrderDetail'
+            $ref: '#/definitions/models.Order'
         "400":
           description: Invalid request
           schema:
@@ -292,7 +211,7 @@ paths:
       summary: query order by trade no
       tags:
       - Orders
-  /orders/wechat/close/{trade_no}:
+  /orders/close/{trade_no}:
     put:
       description: close order
       operationId: Close
@@ -306,9 +225,9 @@ paths:
       - application/json
       responses:
         "200":
-          description: OK
+          description: order
           schema:
-            $ref: '#/definitions/models.WechatOrderDetail'
+            $ref: '#/definitions/models.OrderCore'
         "400":
           description: Invalid request
           schema:
@@ -320,7 +239,7 @@ paths:
       summary: close order
       tags:
       - Orders
-  /orders/wechat/refresh-url/{trade_no}:
+  /orders/refresh-url/{trade_no}:
     put:
       description: refresh pay url
       operationId: RefreshPayUrl
@@ -348,7 +267,7 @@ paths:
       summary: refresh pay url
       tags:
       - Orders
-  /orders/wechat/refund/{trade_no}:
+  /orders/refund/{trade_no}:
     put:
       description: refund pay
       operationId: Refund
@@ -368,9 +287,9 @@ paths:
       - application/json
       responses:
         "200":
-          description: refund_detail
+          description: order
           schema:
-            $ref: '#/definitions/models.WechatRefundDetail'
+            $ref: '#/definitions/models.OrderCore'
         "400":
           description: Invalid request
           schema:
